--- a/docs/cereja_example.ipynb
+++ b/docs/cereja_example.ipynb
@@ -40,28 +40,13 @@
       "metadata": {
         "id": "B1qNEuxZwVs_",
         "colab_type": "code",
-        "outputId": "f0a6bb02-9f72-415c-81a1-127be29a09fb",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 106
-        }
+        "colab": {}
       },
       "source": [
-        "!pip install cereja"
+        "!pip install cereja --upgrade"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Collecting cereja\n",
-            "  Downloading https://files.pythonhosted.org/packages/26/62/c14c775e4a5da825843f006fcb18ac405e5d593a25bae1331af6f76cc37e/cereja-0.2.1-py3-none-any.whl\n",
-            "Installing collected packages: cereja\n",
-            "Successfully installed cereja-0.2.1\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -70,7 +55,7 @@
         "colab_type": "text"
       },
       "source": [
-        "#The module Utils"
+        "#Import cereja"
       ]
     },
     {
@@ -81,7 +66,7 @@
         "colab": {}
       },
       "source": [
-        "from cereja import utils as cj"
+        "import cereja as cj"
       ],
       "execution_count": 0,
       "outputs": []
@@ -94,49 +79,6 @@
       },
       "source": [
         "##Commons"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "m1TiLkBgSTO7",
-        "colab_type": "text"
-      },
-      "source": [
-        "###theta_angle\n",
-        "Calculates and returns theta angle between two vectors"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "3XT2RPm-Scwj",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "a5bd550f-9382-43a4-a8ac-f1a26c56fe9c"
-      },
-      "source": [
-        "u = (747,981)\n",
-        "v = (41, 426)\n",
-        "cj.common.theta_angle(u, v)"
-      ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "31.790657496433635"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 5
-        }
       ]
     },
     {
@@ -156,7 +98,7 @@
         "id": "w_6TLC0DxI1f",
         "colab_type": "code",
         "cellView": "both",
-        "outputId": "7088dbf1-2ead-435e-fcd4-a21a47628d33",
+        "outputId": "8319624c-a89a-4500-8415-45ca470e8cc6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -164,9 +106,9 @@
       },
       "source": [
         "my_var = [1,2,3] # change value and execute the cell\n",
-        "cj.common.is_iterable(my_var)"
+        "cj.is_iterable(my_var)"
       ],
-      "execution_count": 0,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -179,6 +121,152 @@
             "tags": []
           },
           "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bSJ69PuWiYGx",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "1842bb83-eff4-424e-dcf0-26a894d1d401"
+      },
+      "source": [
+        "cj.is_iterable('hi')"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rCjh0owqhhUb",
+        "colab_type": "text"
+      },
+      "source": [
+        "###is_sequence\n",
+        "\n",
+        "Return whether an object a Sequence or not, exclude strings."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tAPeDiyRhzWS",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "21e6a9d7-255e-4e47-d846-29193ce59990"
+      },
+      "source": [
+        "cj.is_sequence([1,2,3])"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QrFmt6iOicEL",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "0c146096-239d-4d06-f99e-5153aeca1f13"
+      },
+      "source": [
+        "cj.is_sequence('hi')"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "q88o7iwCinDY",
+        "colab_type": "text"
+      },
+      "source": [
+        "###theta_angle\n",
+        "\n",
+        "Calculates and returns theta angle between two vectors"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "f547KjDWisWw",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "353bd152-1d23-4668-af59-f0477daf144b"
+      },
+      "source": [
+        "u = (2,2)\n",
+        "v = (0, -2)\n",
+        "cj.theta_angle(u, v)"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "135.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
         }
       ]
     },
@@ -198,23 +286,35 @@
       "metadata": {
         "id": "TXgvv3b2y1A9",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "729ebc75-c558-4dce-9d04-e54b314d6e33",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
         "my_var = [1,2,3,4]\n",
         "num_items_per_batch = 4\n",
-        "result = cj.common.group_items_in_batches(items=my_var, items_per_batch=num_items_per_batch)\n",
+        "result = cj.group_items_in_batches(items=my_var, items_per_batch=num_items_per_batch)\n",
         "print(f\"items per batch with leftovers: {result}\")"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "items per batch with leftovers: [[1, 2, 3, 4]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "YWvTGuECtwHj",
         "colab_type": "code",
-        "outputId": "6021f208-b338-443b-b01c-502ce179c708",
+        "outputId": "1dc82124-9f24-46e8-d6b9-afafd81ada7a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -226,7 +326,7 @@
         "this is due to the split split. You can choose to fill this void as in the example below.\n",
         "\"\"\"\n",
         "my_var = [1,2,3,4]\n",
-        "num_items_per_batch = 4\n",
+        "num_items_per_batch = 3\n",
         "\n",
         "result = cj.common.group_items_in_batches(items=my_var, items_per_batch=3, fill=\"cereja\")\n",
         "print(f\"fill values: {result}\")"
@@ -247,7 +347,7 @@
       "metadata": {
         "id": "PPVLm9VNt3wj",
         "colab_type": "code",
-        "outputId": "39dfa1b2-8077-4558-954f-8c37a3e5122a",
+        "outputId": "e589b13e-c18f-4a7c-f70f-eab6c73b205c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -255,10 +355,10 @@
       },
       "source": [
         "# Other examples\n",
-        "result = cj.common.group_items_in_batches(items=['a','b','c','d'], items_per_batch=2)\n",
+        "result = cj.group_items_in_batches(items=['a','b','c','d'], items_per_batch=2)\n",
         "print(f\"Other examples: {result}\")"
       ],
-      "execution_count": 0,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -285,7 +385,7 @@
       "metadata": {
         "id": "M9lJN5t8AMvs",
         "colab_type": "code",
-        "outputId": "2866f986-fb96-44ee-ca55-cb72b77c7147",
+        "outputId": "5d1fc614-0571-47c5-f2ed-67040f4a5fdd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -294,10 +394,10 @@
       "source": [
         "#simple list\n",
         "my_var = [1,2,3,4,4]\n",
-        "result = cj.common.remove_duplicate_items(my_var)\n",
+        "result = cj.remove_duplicate_items(my_var)\n",
         "print(f\"simple list: {my_var} --> {result}\")"
       ],
-      "execution_count": 0,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -313,7 +413,7 @@
       "metadata": {
         "id": "KUVj-_W0uXxa",
         "colab_type": "code",
-        "outputId": "0b45918b-a78c-4ded-df6f-3cef022d8571",
+        "outputId": "c0996527-c51c-4c1b-f8f2-c138622c8c96",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -322,10 +422,10 @@
       "source": [
         "#list of list\n",
         "my_var = [[1,2,3,4,4], [1,2,3,4,4]]\n",
-        "result = cj.common.remove_duplicate_items(my_var)\n",
+        "result = cj.remove_duplicate_items(my_var)\n",
         "print(f\"list of list: {my_var} --> {result}\")"
       ],
-      "execution_count": 0,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -341,7 +441,7 @@
       "metadata": {
         "id": "vBPxDdzfujKO",
         "colab_type": "code",
-        "outputId": "0f05eb06-8d13-41a0-e97a-132662d9ba58",
+        "outputId": "35263f08-62cb-4e42-cfea-6eb0a5706260",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -350,10 +450,10 @@
       "source": [
         "# other example\n",
         "my_var = [['hi'], ['hi'], ['ih']]\n",
-        "result = cj.common.remove_duplicate_items(my_var)\n",
+        "result = cj.remove_duplicate_items(my_var)\n",
         "print(f\"other example: {my_var} --> {result}\")"
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -361,6 +461,80 @@
             "other example: [['hi'], ['hi'], ['ih']] --> [['hi'], ['ih']]\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KbsUISmOkRDD",
+        "colab_type": "text"
+      },
+      "source": [
+        "###flatten\n",
+        "\n",
+        "Receives values, whether arrays of values, regardless of their shape and flatness"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mxUDUIaGkV_o",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "496d2b91-7e78-4817-ec33-5d08f2443047"
+      },
+      "source": [
+        "sequence = [[1, 2, 3], [], [[2, [3], 4], 6]]\n",
+        "cj.flatten(sequence)"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 2, 3, 4, 6]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5uK1e-rQxcTf",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "06d15f0b-277d-4dd6-b59b-db60bb68f2c0"
+      },
+      "source": [
+        "sequence = [[1, 2, 3], [], [[2, [3], 4], 6]]\n",
+        "cj.flatten(sequence, max_recursion=2)"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 2, [3], 4, 6]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
         }
       ]
     },
@@ -390,7 +564,7 @@
       "metadata": {
         "id": "cNO-l7MKvlRG",
         "colab_type": "code",
-        "outputId": "f450c2eb-e132-432f-ed37-2c0b24eb0323",
+        "outputId": "a353b6c0-c7b7-4436-ccbc-f38c1d072b15",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -398,10 +572,10 @@
       },
       "source": [
         "# Instance\n",
-        "freq = cj.common.Freq([1,2,3,3,4,5,6,7,6,7,12,31,123,5,3])\n",
+        "freq = cj.Freq([1,2,3,3,4,5,6,7,6,7,12,31,123,5,3])\n",
         "print(freq)"
       ],
-      "execution_count": 0,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -437,17 +611,17 @@
       "metadata": {
         "id": "Sp3jZx3KxYXO",
         "colab_type": "code",
-        "outputId": "5ace4cee-483e-45b1-9ea3-a54092020183",
+        "outputId": "0c465a7c-f148-4f68-a3b8-9c2f3ee5d65f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         }
       },
       "source": [
-        "freq = cj.common.Freq([1,2,3,3,4,5,6,7,6,7,12,31,123,5,3])\n",
+        "freq = cj.Freq([1,2,3,3,4,5,6,7,6,7,12,31,123,5,3])\n",
         "freq.most_freq(4)"
       ],
-      "execution_count": 0,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -459,7 +633,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 124
+          "execution_count": 11
         }
       ]
     },
@@ -479,13 +653,31 @@
       "metadata": {
         "id": "aVkXduKezIYs",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "d727f9ed-1c70-4276-a16c-b1f7c4c6e061"
       },
       "source": [
-        ""
+        "freq = cj.Freq([1,2,3,3,4,5,6,7,6,7,12,31,123,5,3])\n",
+        "freq.least_freq(4)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{4: 1, 12: 1, 31: 1, 123: 1}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -513,26 +705,26 @@
       "metadata": {
         "id": "8faV1ZV9BN1w",
         "colab_type": "code",
-        "outputId": "7c7077d2-5191-44ef-9a14-0a9dfc5c4fe4",
+        "outputId": "ceae4a30-57d2-491c-8744-076c9bb482c1",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
+          "height": 52
         }
       },
       "source": [
-        "@cj.decorators.time_exec\n",
+        "@cj.time_exec\n",
         "def my_function(my_param): # Change-me\n",
         "    print(my_param)\n",
         "\n",
         "my_function(\"Hi Cereja\")"
       ],
-      "execution_count": 0,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Hi Cereja\n",
-            "[my_function] performed 0.0011606216430664062\n"
+            "[my_function] performed 0.00046539306640625\n"
           ],
           "name": "stdout"
         }
@@ -565,10 +757,10 @@
       "metadata": {
         "id": "qxpaAczOCxCn",
         "colab_type": "code",
-        "outputId": "c751b6c4-374f-4770-b892-df7b7b3570ab",
+        "outputId": "34c53775-d9dd-4319-a32d-6d2eee06c635",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 85
+          "height": 86
         }
       },
       "source": [
@@ -579,9 +771,9 @@
         "my_dir = '/content/sample_data'\n",
         "my_ext_file = '.csv'\n",
         "\n",
-        "cj.path.group_path_from_dir(dir_path=my_dir, num_items_on_tuple=2, ext_file=my_ext_file)"
+        "cj.group_path_from_dir(dir_path=my_dir, num_items_on_tuple=2, ext_file=my_ext_file)"
       ],
-      "execution_count": 0,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -596,7 +788,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 121
+          "execution_count": 15
         }
       ]
     },
@@ -615,22 +807,22 @@
       "metadata": {
         "id": "qgiqJp8vEU-r",
         "colab_type": "code",
-        "outputId": "73a30ca8-92d9-4d58-c2de-52622c307dc5",
+        "outputId": "b2d9b6c9-2048-46e7-e98a-627dc2e3dedf",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
+          "height": 52
         }
       },
       "source": [
         "my_file_path = '/content/sample_data/california_housing_test.csv'\n",
-        "result = cj.path.file_name(file_path=my_file_path)\n",
+        "result = cj.file_name(file_path=my_file_path)\n",
         "print(f\"file_path: {my_file_path} --> {result}\")\n",
         "\n",
         "# or with ext\n",
-        "result = cj.path.file_name(file_path=my_file_path, with_ext=True)\n",
+        "result = cj.file_name(file_path=my_file_path, with_ext=True)\n",
         "print(f\"file_path: {my_file_path} --> {result}\")"
       ],
-      "execution_count": 0,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
