--- a/docs/cereja_example.ipynb
+++ b/docs/cereja_example.ipynb
@@ -314,7 +314,7 @@
       "metadata": {
         "id": "YWvTGuECtwHj",
         "colab_type": "code",
-        "outputId": "1dc82124-9f24-46e8-d6b9-afafd81ada7a",
+        "outputId": "8a4864a5-8cd7-4af4-945d-843861ebd62f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -328,10 +328,10 @@
         "my_var = [1,2,3,4]\n",
         "num_items_per_batch = 3\n",
         "\n",
-        "result = cj.common.group_items_in_batches(items=my_var, items_per_batch=3, fill=\"cereja\")\n",
+        "result = cj.group_items_in_batches(items=my_var, items_per_batch=num_items_per_batch, fill=\"cereja\")\n",
         "print(f\"fill values: {result}\")"
       ],
-      "execution_count": 0,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
