--- a/docs/cereja_example.ipynb
+++ b/docs/cereja_example.ipynb
@@ -40,13 +40,28 @@
       "metadata": {
         "id": "B1qNEuxZwVs_",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 105
+        },
+        "outputId": "fb468597-fd12-4454-d0e8-0dfeee6151f2"
       },
       "source": [
         "!pip install cereja --upgrade"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting cereja\n",
+            "  Downloading https://files.pythonhosted.org/packages/2b/49/d967ec305185e18d74d2978b0b7fd2e2cbe5436735da0b9773c8c483a049/cereja-1.0.1-py3-none-any.whl\n",
+            "Installing collected packages: cereja\n",
+            "Successfully installed cereja-1.0.1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -98,7 +113,7 @@
         "id": "w_6TLC0DxI1f",
         "colab_type": "code",
         "cellView": "both",
-        "outputId": "8319624c-a89a-4500-8415-45ca470e8cc6",
+        "outputId": "4c3dbc67-7c11-4ae6-d441-91cd46cd8725",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -107,6 +122,36 @@
       "source": [
         "my_var = [1,2,3] # change value and execute the cell\n",
         "cj.is_iterable(my_var)"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bSJ69PuWiYGx",
+        "colab_type": "code",
+        "outputId": "716a552d-9b33-4261-9221-244e3f797f9c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "cj.is_iterable('hi')"
       ],
       "execution_count": 4,
       "outputs": [
@@ -121,36 +166,6 @@
             "tags": []
           },
           "execution_count": 4
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "bSJ69PuWiYGx",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "1842bb83-eff4-424e-dcf0-26a894d1d401"
-      },
-      "source": [
-        "cj.is_iterable('hi')"
-      ],
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 6
         }
       ]
     },
@@ -171,11 +186,11 @@
       "metadata": {
         "id": "tAPeDiyRhzWS",
         "colab_type": "code",
+        "outputId": "9bdee8b7-0e33-4210-d915-06848e87eb9c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "21e6a9d7-255e-4e47-d846-29193ce59990"
+        }
       },
       "source": [
         "cj.is_sequence([1,2,3])"
@@ -201,16 +216,16 @@
       "metadata": {
         "id": "QrFmt6iOicEL",
         "colab_type": "code",
+        "outputId": "0e1fdd6a-4d01-4183-83b3-6df239cd6814",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "0c146096-239d-4d06-f99e-5153aeca1f13"
+        }
       },
       "source": [
         "cj.is_sequence('hi')"
       ],
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -222,7 +237,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 6
         }
       ]
     },
@@ -243,18 +258,18 @@
       "metadata": {
         "id": "f547KjDWisWw",
         "colab_type": "code",
+        "outputId": "9e3eba10-c195-4b4a-9c36-86f1d377e390",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "353bd152-1d23-4668-af59-f0477daf144b"
+        }
       },
       "source": [
         "u = (2,2)\n",
         "v = (0, -2)\n",
         "cj.theta_angle(u, v)"
       ],
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -266,7 +281,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 7
         }
       ]
     },
@@ -286,7 +301,7 @@
       "metadata": {
         "id": "TXgvv3b2y1A9",
         "colab_type": "code",
-        "outputId": "729ebc75-c558-4dce-9d04-e54b314d6e33",
+        "outputId": "4f31f0b8-68b1-469d-fb5b-968a7b4eeaed",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -298,7 +313,7 @@
         "result = cj.group_items_in_batches(items=my_var, items_per_batch=num_items_per_batch)\n",
         "print(f\"items per batch with leftovers: {result}\")"
       ],
-      "execution_count": 10,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -314,7 +329,7 @@
       "metadata": {
         "id": "YWvTGuECtwHj",
         "colab_type": "code",
-        "outputId": "8a4864a5-8cd7-4af4-945d-843861ebd62f",
+        "outputId": "1e61683b-e583-4a25-b11d-8e25d4060ecd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -331,7 +346,7 @@
         "result = cj.group_items_in_batches(items=my_var, items_per_batch=num_items_per_batch, fill=\"cereja\")\n",
         "print(f\"fill values: {result}\")"
       ],
-      "execution_count": 17,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -347,7 +362,7 @@
       "metadata": {
         "id": "PPVLm9VNt3wj",
         "colab_type": "code",
-        "outputId": "e589b13e-c18f-4a7c-f70f-eab6c73b205c",
+        "outputId": "8756924d-da77-4543-e4f0-98ac2c648144",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -358,7 +373,7 @@
         "result = cj.group_items_in_batches(items=['a','b','c','d'], items_per_batch=2)\n",
         "print(f\"Other examples: {result}\")"
       ],
-      "execution_count": 4,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -385,7 +400,7 @@
       "metadata": {
         "id": "M9lJN5t8AMvs",
         "colab_type": "code",
-        "outputId": "5d1fc614-0571-47c5-f2ed-67040f4a5fdd",
+        "outputId": "6d64740a-dc18-4f0a-b550-a79bbb595b41",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -397,7 +412,7 @@
         "result = cj.remove_duplicate_items(my_var)\n",
         "print(f\"simple list: {my_var} --> {result}\")"
       ],
-      "execution_count": 3,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -413,7 +428,7 @@
       "metadata": {
         "id": "KUVj-_W0uXxa",
         "colab_type": "code",
-        "outputId": "c0996527-c51c-4c1b-f8f2-c138622c8c96",
+        "outputId": "11c0c0e9-9a5c-4e8b-ce47-d106cc4e0994",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -425,7 +440,7 @@
         "result = cj.remove_duplicate_items(my_var)\n",
         "print(f\"list of list: {my_var} --> {result}\")"
       ],
-      "execution_count": 5,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -441,7 +456,7 @@
       "metadata": {
         "id": "vBPxDdzfujKO",
         "colab_type": "code",
-        "outputId": "35263f08-62cb-4e42-cfea-6eb0a5706260",
+        "outputId": "3f2efd4d-6862-460f-ca16-6b92f84c9c8e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -453,7 +468,7 @@
         "result = cj.remove_duplicate_items(my_var)\n",
         "print(f\"other example: {my_var} --> {result}\")"
       ],
-      "execution_count": 6,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -481,17 +496,17 @@
       "metadata": {
         "id": "mxUDUIaGkV_o",
         "colab_type": "code",
+        "outputId": "084c049f-77f1-4ffb-c220-60c7ed95e0a4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "496d2b91-7e78-4817-ec33-5d08f2443047"
+        }
       },
       "source": [
         "sequence = [[1, 2, 3], [], [[2, [3], 4], 6]]\n",
         "cj.flatten(sequence)"
       ],
-      "execution_count": 7,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -503,7 +518,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 14
         }
       ]
     },
@@ -512,17 +527,17 @@
       "metadata": {
         "id": "5uK1e-rQxcTf",
         "colab_type": "code",
+        "outputId": "2f103f1e-e7da-4774-b13f-aacc919e42d0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "06d15f0b-277d-4dd6-b59b-db60bb68f2c0"
+        }
       },
       "source": [
         "sequence = [[1, 2, 3], [], [[2, [3], 4], 6]]\n",
         "cj.flatten(sequence, max_recursion=2)"
       ],
-      "execution_count": 9,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -534,7 +549,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 15
         }
       ]
     },
@@ -564,10 +579,10 @@
       "metadata": {
         "id": "cNO-l7MKvlRG",
         "colab_type": "code",
-        "outputId": "a353b6c0-c7b7-4436-ccbc-f38c1d072b15",
+        "outputId": "b91d4ac7-710e-46d9-ffda-cfc1e48d98fc",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 51
         }
       },
       "source": [
@@ -575,11 +590,12 @@
         "freq = cj.Freq([1,2,3,3,4,5,6,7,6,7,12,31,123,5,3])\n",
         "print(freq)"
       ],
-      "execution_count": 10,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "WARNING:cereja.common:[!] class still under development\n",
             "{3: 3, 5: 2, 6: 2, 7: 2, 1: 1, 2: 1, 4: 1, 12: 1, 31: 1, 123: 1}\n"
           ],
           "name": "stdout"
@@ -611,18 +627,25 @@
       "metadata": {
         "id": "Sp3jZx3KxYXO",
         "colab_type": "code",
-        "outputId": "0c465a7c-f148-4f68-a3b8-9c2f3ee5d65f",
+        "outputId": "53514344-64ac-4361-a235-cf0bb3329ad1",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 51
         }
       },
       "source": [
         "freq = cj.Freq([1,2,3,3,4,5,6,7,6,7,12,31,123,5,3])\n",
         "freq.most_freq(4)"
       ],
-      "execution_count": 11,
+      "execution_count": 17,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "WARNING:cereja.common:[!] class still under development\n"
+          ],
+          "name": "stdout"
+        },
         {
           "output_type": "execute_result",
           "data": {
@@ -633,7 +656,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 17
         }
       ]
     },
@@ -653,18 +676,25 @@
       "metadata": {
         "id": "aVkXduKezIYs",
         "colab_type": "code",
+        "outputId": "4061fa9d-7fc0-4622-8c82-d13c2f65f328",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "d727f9ed-1c70-4276-a16c-b1f7c4c6e061"
+          "height": 51
+        }
       },
       "source": [
         "freq = cj.Freq([1,2,3,3,4,5,6,7,6,7,12,31,123,5,3])\n",
         "freq.least_freq(4)"
       ],
-      "execution_count": 13,
+      "execution_count": 18,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "WARNING:cereja.common:[!] class still under development\n"
+          ],
+          "name": "stdout"
+        },
         {
           "output_type": "execute_result",
           "data": {
@@ -675,7 +705,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 18
         }
       ]
     },
@@ -705,26 +735,28 @@
       "metadata": {
         "id": "8faV1ZV9BN1w",
         "colab_type": "code",
-        "outputId": "ceae4a30-57d2-491c-8744-076c9bb482c1",
+        "outputId": "95a6276b-8fc1-42d3-a2f0-153f5953ca1b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 52
+          "height": 68
         }
       },
       "source": [
+        "cj.set_log_level('INFO') # needed to see message \n",
         "@cj.time_exec\n",
         "def my_function(my_param): # Change-me\n",
         "    print(my_param)\n",
         "\n",
         "my_function(\"Hi Cereja\")"
       ],
-      "execution_count": 14,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "INFO:cereja.utils:Update log level to INFO\n",
             "Hi Cereja\n",
-            "[my_function] performed 0.00046539306640625\n"
+            "INFO:cereja.decorators:[my_function] performed 5.9604644775390625e-05\n"
           ],
           "name": "stdout"
         }
@@ -757,10 +789,10 @@
       "metadata": {
         "id": "qxpaAczOCxCn",
         "colab_type": "code",
-        "outputId": "34c53775-d9dd-4319-a32d-6d2eee06c635",
+        "outputId": "b8a3dfcf-0d3a-4731-f176-e1cfd2ae06b4",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 86
+          "height": 85
         }
       },
       "source": [
@@ -773,7 +805,7 @@
         "\n",
         "cj.group_path_from_dir(dir_path=my_dir, num_items_on_tuple=2, ext_file=my_ext_file)"
       ],
-      "execution_count": 15,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -788,7 +820,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 22
         }
       ]
     },
@@ -807,10 +839,10 @@
       "metadata": {
         "id": "qgiqJp8vEU-r",
         "colab_type": "code",
-        "outputId": "b2d9b6c9-2048-46e7-e98a-627dc2e3dedf",
+        "outputId": "5cf66ddd-7bdc-439d-b274-1110c44ed1b7",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 52
+          "height": 51
         }
       },
       "source": [
@@ -822,7 +854,7 @@
         "result = cj.file_name(file_path=my_file_path, with_ext=True)\n",
         "print(f\"file_path: {my_file_path} --> {result}\")"
       ],
-      "execution_count": 16,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
